--- a/back/package.json
+++ b/back/package.json
@@ -27,8 +27,7 @@
     "@prisma/client": "^2.28.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "unique-slug": "^2.0.2"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
